[package]
name = "argwerk"
version = "0.20.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "Simple command-line parser through a declarative macro."
documentation = "https://docs.rs/argwerk"
readme = "README.md"
homepage = "https://github.com/udoprog/argwerk"
repository = "https://github.com/udoprog/argwerk"
license = "MIT/Apache-2.0"
keywords = ["arg", "argument", "cli", "parse", "parser"]
categories = ["command-line-interface"]

[dev-dependencies]
anyhow = "1"
